--- a/main.Rmd
+++ b/main.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Méta-analyse bayésienne de l'effet de l'hydroxychloroquine sur la mortaité au cours du COVID-1"
+title: "Méta-analyse bayésienne de l'effet de l'hydroxychloroquine sur la mortaité au cours du COVID-19"
 author: "Fourmond M, Mukakalisa C, Catoire P"
 date: "13/12/2021"
 output: beamer_presentation
@@ -10,7 +10,7 @@ header-includes:
   - \usetikzlibrary{positioning, arrows}
 ---
 
-```{r packages include=F}
+```{r packages, include=FALSE}
 #Packages
 library(metafor)
 library(rjags)
@@ -18,7 +18,7 @@ library(HDInterval)
 library(coda)
 ```
 
-```{r dataframes include = F}
+```{r dataframes, include = F}
 #Import des données
 df = read.csv("dataaxfors.csv")
 df.pubs.hcq = df[df$GROUP=="AP",]
@@ -28,7 +28,7 @@ df.highdose.all.hcq = df[df$DOSECLASS=="HD",]
 df.lowdose.all.hcq = df[df$DOSECLASS=="LD",]
 ```
 
-```{r custom functions include = F}
+```{r custom-functions, include = F}
 #Création de fonctions personnalisées
 
 #Création d'un modèle JAGS pour chaque jeu de données
@@ -159,7 +159,7 @@ $$
 
 # Approche analytique
 
-On cherche à déterminer $\mathbb{P}(\mu|Y)$, avec $Y$ le vecteur $\begin{pmatrix}Y_1, \ldots,Y_k\end{pmatrix}^T = \begin{pmatrix}logOR_1, \ldots,logOR_k\end{pmatrix}^T$ des log-OR observés.
+On cherche à déterminer $\mathbb{P}(\mu|Y)$, avec $Y$ l'ensemble $\{logOR_1, \ldots,logOR_k\}$ des log-OR observés.
 
 On a $\mathbb{P}(\mu,\theta|Y) \propto \mathbb{P}(Y | \mu,\theta)\times\mathbb{P}(\theta|\mu)\times\mathbb{P}(\mu)$
 
@@ -196,7 +196,7 @@ $$
 
 # Modèle "naïf"
 
-```{r naive model include = F}
+```{r naive-model, include = F}
 #Modèle initial
 model.hcq.all.naive = custom.jagsmodel(df.hcq)
 
@@ -206,26 +206,26 @@ res.jags.hcq.all.naive = coda.samples(model = model.hcq.all.naive,
                                   n.iter = 20000)
 ```
 
-```{r plot naive model echo = F}
+```{r plot-naive-model, echo = F}
 plot(res.jags.hcq.all.naive)
 ```
 
 # Quantiles courants
 
-```{r cumuplot naive model echo = F}
+```{r cumuplot-naive-model, echo = F}
 cumuplot(res.jags.hcq.all.naive)
 ```
 
 # Autocorrélation
 
-```{r autocorrelation naive model echo = F}
+```{r autocorrelation-naive-model, echo = F}
 acfplot(res.jags.hcq.all.naive, lag.max=500,ylim=c(-0.1,1))
 ```
 
 # Gelman-Rubin
 
-```{r gelman plot echo = F}
-gelman.plot(res.jags.hcq.all.naive)
+```{r gelman-plot, echo = F}
+gelman.plot(res.jags.hcq.all.naive, ylim = c(1,2))
 ```
 
 # Paramétrage du modèle :
@@ -233,7 +233,7 @@ gelman.plot(res.jags.hcq.all.naive)
 - `thin` : 500
 - `burn-in` : 10000
 
-```{r overall model include = F}
+```{r overall-model, include = F}
 #Analyse pour l'ensemble des articles HCQ
 model.hcq.all = custom.jagsmodel(df.hcq)
 
@@ -255,15 +255,17 @@ res.jags.hcq.all = window(res.jags.hcq.all,start = 10001)
 - p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.all[[1]][,1],log(1)),2)`
 - p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.all[[1]][,1],log(0.9)),2)`
 
+*(Résultats de Axfors et al : 1.11 [1.02-1.20])*
+
 # Densités a posteriori
 
-```{r plot overall model echo=FALSE}
+```{r plot-overall-model, echo=FALSE}
 plot(res.jags.hcq.all)
 ```
 
 # Convergence
 
-```{r plots convergence overall model echo = F}
+```{r plots-convergence-overall-model, echo = F}
 par(mfrow=c(2,2))
 cumuplot(res.jags.hcq.all)
 acfplot(res.jags.hcq.all, lag.max=500,ylim=c(-0.1,1))
@@ -272,7 +274,7 @@ gelman.plot(res.jags.hcq.all)
 
 # Etude en sous-groupes : publiées vs. non publiées
 
-```{r subgroups models pubs include = F}
+```{r subgroups-models-pubs, include = F}
 #Analyse pour l'ensemble des articles HCQ publiés
 model.hcq.pubs = custom.jagsmodel(df.pubs.hcq)
 
@@ -297,23 +299,27 @@ res.jags.hcq.nopubs = coda.samples(model = model.hcq.nopubs,
 res.jags.hcq.nopubs = window(res.jags.hcq.nopubs,start = 10001)
 ```
 
-Groupe "études publiées" (n=`r nrow(df.pubs.hcq)`:
+Groupe "études publiées" (n=`r nrow(df.pubs.hcq)`):
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.pubs)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.pubs)[1]),2)`;`r round(exp(hdi(res.jags.hcq.pubs)[2]),2)`]
 - p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.pubs[[1]][,1],log(1)),2)`
 - p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.pubs[[1]][,1],log(0.9)),2)`
 
-Groupe "études non publiées" (n=`r nrow(df.nopubs.hcq)`:
+*(Résultats de Axfors et al : 1.12 [1.08-1.16])*
+
+Groupe "études non publiées" (n=`r nrow(df.nopubs.hcq)`):
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.nopubs)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.nopubs)[1]),2)`;`r round(exp(hdi(res.jags.hcq.nopubs)[2]),2)`]
 - p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.nopubs[[1]][,1],log(1)),2)`
 - p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.nopubs[[1]][,1],log(0.9)),2)`
 
+*(Résultats de Axfors et al : 0.92 [0.63-1.34])*
+
 # Sous-groupes : dose d'hydroxychloroquine
 
-```{r subgroups models dose include = F}
+```{r subgroups-models-dose, include = F}
 #Analyse pour l'ensemble des articles HCQ forte dose
 model.hcq.highdose = custom.jagsmodel(df.highdose.all.hcq)
 
@@ -362,7 +368,7 @@ On modifie les paramètres a priori :
 - $\mu \sim \mathcal{N}(0,4)$, $\sigma^2 \sim \mathcal{U}(0,1)$ (modèle ST)
 - $\mu \sim \mathcal{N}(0,4)$, $\sigma^2 \sim \mathcal{U}(0,100)$ (modèle SL)
 
-```{r sensitivity include = F}
+```{r sensitivity, include = F}
 model.hcq.all.mt = custom.jagsmodel(df.hcq, model = "modelMT.txt")
 
 res.jags.hcq.all.mt = coda.samples(model = model.hcq.all.mt,
@@ -463,12 +469,13 @@ Médianes a posteriori :
 - l'interprétation des p-valeurs et des intervalles de crédibilité ne permet pas d'exclure avec une forte probabilité un effet sur de l'hydroxychloroquine sur la mortalité
 - l'augmentation de l'intervalle de crédibilité dans les méta-analyses bayésiennes comparativement aux intervalles de confiances a été décrit par certains auteurs [@seideComparisonBayesianFrequentist2020]
 - Les études de sensibilité ne montrent pas d'effet sensible du choix du type ou de la valeur des hyperparamètres des distributions des paramètres *a priori*
+- les études non publiées semblent plus en faveur d'une réduction de la mortalité par l'HCQ, mais avec de faibles effectifs influant peu sur le résultat global
 
 # Conclusion
 
-- La méta-analyse bayésienne montre un effet de même direction mais de magnitude moins importante que l'analyse fréquentiste
+- La méta-analyse bayésienne montre un effet de même direction et magnitude, mais avec une dispersion plus importante de la distribution de probabilité a posteriori que l'analyse fréquentiste ne le laisse supposer
 - la p-direction faible pour un OR < 0.9 est en faveur d'un effet au mieux modeste de l'hydroxychloroquine sur la mortalité
-- il ne semble pas y avoir de différence sensible en analyse en sous-groupes en fonction de la dose ou entre études publiées ou non
+- il ne semble pas y avoir de différence sensible en analyse en sous-groupes en fonction de la dose
 
 # Références
 
