--- a/main.Rmd
+++ b/main.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Méta-analyse bayésienne de l'effet de l'hydroxychloroquine sur la mortaité au cours du COVID-19"
+title: "Méta-analyse bayésienne de l'effet de l'hydroxychloroquine sur la mortalité au cours du COVID-19"
 author: "Fourmond M, Mukakalisa C, Catoire P"
 date: "13/12/2021"
 output: beamer_presentation
@@ -85,7 +85,7 @@ custom.pdir = function(sample,value,way = "sup"){
 **Principe : modèle** ***hiérarchique***
 
 ## Pour notre question de recherche :
-- @axforsMortalityOutcomesHydroxychloroquine2021 a réalisé une méta-analyse par une approche fréquentiste, avec étude des sous-groupes d'études publiées et non publiées
+- @axforsMortalityOutcomesHydroxychloroquine2021 ont réalisé une méta-analyse par une approche fréquentiste, avec étude des sous-groupes d'études publiées et non publiées
 
 # Question de recherche
 
@@ -141,7 +141,7 @@ $$
 	\node [box] (logOR) {\Large $logOR_{i}$};
 	\node [box, above = of logOR,  yshift = -0.2cm] (thetasigma){$\mathcal{N}(\theta_{i}, \sigma^{2}_i)$ \\
 	\includegraphics[scale = 0.25]{Normal.png}} ;
-	\node [box, above = of thetasigma,  yshift = -0.2cm] (musigma){$\mathcal{N}(\theta, \sigma^{2})$ \\
+	\node [box, above = of thetasigma,  yshift = -0.2cm] (musigma){$\mathcal{N}(\mu, \sigma^{2})$ \\
 	\includegraphics[scale = 0.25]{Normal.png}} ;
 	\node [box, above = of musigma,  xshift = 2.7 cm] (unif){$\mathcal{U}$(0,4) \\
 	\includegraphics[scale = 0.25]{Uniform.png} } ;
@@ -194,6 +194,7 @@ $$
 = \int_0^4\mathbb{P}(\theta|\mu,\sigma^2)\times \mathbb{P}(\sigma^2)d\sigma^2
 $$
 
+
 # Modèle "naïf"
 
 ```{r naive-model, include = F}
@@ -228,10 +229,18 @@ acfplot(res.jags.hcq.all.naive, lag.max=500,ylim=c(-0.1,1))
 gelman.plot(res.jags.hcq.all.naive, ylim = c(1,2))
 ```
 
+```{r final-parameters, include=F}
+thin = 300
+burnin = 15000
+niter = 1000000
+```
+
 # Paramétrage du modèle :
 
-- `thin` : 500
-- `burn-in` : 10000
+- `thin` : `r thin`
+- `burn-in` : `r burnin`
+- `n.iter` : `r niter`
+- taille d'échantillon : $\frac{n.iter - burn-in}{thin}$ = `r round((niter-burnin)/thin,0)`
 
 ```{r overall-model, include = F}
 #Analyse pour l'ensemble des articles HCQ
@@ -240,11 +249,11 @@ model.hcq.all = custom.jagsmodel(df.hcq)
 res.jags.hcq.all = coda.samples(model = model.hcq.all,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all = window(res.jags.hcq.all,start = 10001)
+res.jags.hcq.all = window(res.jags.hcq.all,start = burnin+1)
 
 ```
 
@@ -252,8 +261,8 @@ res.jags.hcq.all = window(res.jags.hcq.all,start = 10001)
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.all)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.all)[1]),2)`;`r round(exp(hdi(res.jags.hcq.all)[2]),2)`]
-- p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.all[[1]][,1],log(1)),2)`
-- p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.all[[1]][,1],log(0.9)),2)`
+- p-direction (OR < 1) : `r round(1-custom.pdir(res.jags.hcq.all[[1]][,1],log(1)),2)`
+- p-direction (OR < 0.9) : `r round(1-custom.pdir(res.jags.hcq.all[[1]][,1],log(0.9)),2)`
 
 *(Résultats de Axfors et al : 1.11 [1.02-1.20])*
 
@@ -263,12 +272,22 @@ res.jags.hcq.all = window(res.jags.hcq.all,start = 10001)
 plot(res.jags.hcq.all)
 ```
 
-# Convergence
+# Quantiles
 
-```{r plots-convergence-overall-model, echo = F}
-par(mfrow=c(2,2))
+```{r plots-convergence-overall-model-cumu, echo = F}
 cumuplot(res.jags.hcq.all)
+```
+
+# Autocorrélation
+
+```{r plots-convergence-overall-model-corr, echo = F}
 acfplot(res.jags.hcq.all, lag.max=500,ylim=c(-0.1,1))
+gelman.plot(res.jags.hcq.all)
+```
+
+# Gelman-Rubin
+
+```{r plots-convergence-overall-model-gelman, echo = F}
 gelman.plot(res.jags.hcq.all)
 ```
 
@@ -281,30 +300,30 @@ model.hcq.pubs = custom.jagsmodel(df.pubs.hcq)
 res.jags.hcq.pubs = coda.samples(model = model.hcq.pubs,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                 thin = 500)
+                                  n.iter = niter,
+                                 thin = thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.pubs = window(res.jags.hcq.pubs,start = 10001)
+res.jags.hcq.pubs = window(res.jags.hcq.pubs,start = burnin+1)
 
 #Analyse pour l'ensemble des articles HCQ non publiés
 model.hcq.nopubs = custom.jagsmodel(df.nopubs.hcq)
 res.jags.hcq.nopubs = coda.samples(model = model.hcq.nopubs,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                 thin = 500)
+                                  n.iter = niter,
+                                 thin = thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.nopubs = window(res.jags.hcq.nopubs,start = 10001)
+res.jags.hcq.nopubs = window(res.jags.hcq.nopubs,start = burnin+1)
 ```
 
 Groupe "études publiées" (n=`r nrow(df.pubs.hcq)`):
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.pubs)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.pubs)[1]),2)`;`r round(exp(hdi(res.jags.hcq.pubs)[2]),2)`]
-- p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.pubs[[1]][,1],log(1)),2)`
-- p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.pubs[[1]][,1],log(0.9)),2)`
+- p-direction (OR < 1) : `r round(1-custom.pdir(res.jags.hcq.pubs[[1]][,1],log(1)),2)`
+- p-direction (OR < 0.9) : `r round(1-custom.pdir(res.jags.hcq.pubs[[1]][,1],log(0.9)),2)`
 
 *(Résultats de Axfors et al : 1.12 [1.08-1.16])*
 
@@ -326,37 +345,37 @@ model.hcq.highdose = custom.jagsmodel(df.highdose.all.hcq)
 res.jags.hcq.highdose = coda.samples(model = model.hcq.highdose,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                 thin = 500)
+                                  n.iter = niter,
+                                 thin = thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.highdose = window(res.jags.hcq.highdose,start = 10001)
+res.jags.hcq.highdose = window(res.jags.hcq.highdose,start = burnin+1)
 
 #Analyse pour l'ensemble des articles HCQ faible dose
 model.hcq.lowdose = custom.jagsmodel(df.lowdose.all.hcq)
 res.jags.hcq.lowdose = coda.samples(model = model.hcq.lowdose,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                 thin = 500)
+                                  n.iter = niter,
+                                 thin = thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.lowdose = window(res.jags.hcq.lowdose,start = 10001)
+res.jags.hcq.lowdose = window(res.jags.hcq.lowdose,start = burnin+1)
 ```
 
-Groupe "études publiées" (n=`r nrow(df.highdose.all.hcq)`:
+Groupe "forte dose" (n=`r nrow(df.highdose.all.hcq)`):
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.highdose)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.highdose)[1]),2)`;`r round(exp(hdi(res.jags.hcq.highdose)[2]),2)`]
-- p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.highdose[[1]][,1],log(1)),2)`
-- p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.highdose[[1]][,1],log(0.9)),2)`
+- p-direction (OR < 1) : `r round(1-custom.pdir(res.jags.hcq.highdose[[1]][,1],log(1)),2)`
+- p-direction (OR < 0.9) : `r round(1-custom.pdir(res.jags.hcq.highdose[[1]][,1],log(0.9)),2)`
 
-Groupe "études non publiées" (n=`r nrow(df.lowdose.all.hcq)`:
+Groupe "faible dose" (n=`r nrow(df.lowdose.all.hcq)`):
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.lowdose)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.lowdose)[1]),2)`;`r round(exp(hdi(res.jags.hcq.lowdose)[2]),2)`]
-- p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.lowdose[[1]][,1],log(1)),2)`
-- p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.lowdose[[1]][,1],log(0.9)),2)`
+- p-direction (OR < 1) : `r round(1-custom.pdir(res.jags.hcq.lowdose[[1]][,1],log(1)),2)`
+- p-direction (OR < 0.9) : `r round(1-custom.pdir(res.jags.hcq.lowdose[[1]][,1],log(0.9)),2)`
 
 # Analyse de sensibilité
 
@@ -364,7 +383,7 @@ On modifie les paramètres a priori :
 
 - $\mu \sim \mathcal{N}(0,4)$, $\sigma^2 \sim \mathcal{U}(0,4)$ (modèle initial)
 - $\mu \sim \mathcal{N}(0,1)$, $\sigma^2 \sim \mathcal{U}(0,4)$ (modèle MT)
-- $\mu \sim \mathcal{N}(0,100)$, $\sigma^2 \sim \mathcal{U}(0,4)$ (modèle ML)
+- $\mu \sim \mathcal{N}(0,10)$, $\sigma^2 \sim \mathcal{U}(0,4)$ (modèle ML)
 - $\mu \sim \mathcal{N}(0,4)$, $\sigma^2 \sim \mathcal{U}(0,1)$ (modèle ST)
 - $\mu \sim \mathcal{N}(0,4)$, $\sigma^2 \sim \mathcal{U}(0,100)$ (modèle SL)
 
@@ -374,77 +393,77 @@ model.hcq.all.mt = custom.jagsmodel(df.hcq, model = "modelMT.txt")
 res.jags.hcq.all.mt = coda.samples(model = model.hcq.all.mt,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.mt = window(res.jags.hcq.all.mt,start = 10001)
+res.jags.hcq.all.mt = window(res.jags.hcq.all.mt,start = burnin+1)
 
 model.hcq.all.ml = custom.jagsmodel(df.hcq, model = "modelML.txt")
 
 res.jags.hcq.all.ml = coda.samples(model = model.hcq.all.ml,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.ml = window(res.jags.hcq.all.ml,start = 10001)
+res.jags.hcq.all.ml = window(res.jags.hcq.all.ml,start = burnin+1)
 
 model.hcq.all.st = custom.jagsmodel(df.hcq, model = "modelST.txt")
 
 res.jags.hcq.all.st = coda.samples(model = model.hcq.all.st,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.st = window(res.jags.hcq.all.st,start = 10001)
+res.jags.hcq.all.st = window(res.jags.hcq.all.st,start = burnin+1)
 
 model.hcq.all.sl = custom.jagsmodel(df.hcq, model = "modelSL.txt")
 
 res.jags.hcq.all.sl = coda.samples(model = model.hcq.all.sl,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.sl = window(res.jags.hcq.all.sl,start = 10001)
+res.jags.hcq.all.sl = window(res.jags.hcq.all.sl,start = burnin+1)
 
 model.hcq.all.ib11 = custom.jagsmodel(df.hcq, model = "modelIB11.txt")
 
 res.jags.hcq.all.ib11 = coda.samples(model = model.hcq.all.ib11,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.ib11 = window(res.jags.hcq.all.ib11,start = 10001)
+res.jags.hcq.all.ib11 = window(res.jags.hcq.all.ib11,start = burnin+1)
 
 model.hcq.all.ib44 = custom.jagsmodel(df.hcq, model = "modelIB44.txt")
 
 res.jags.hcq.all.ib44 = coda.samples(model = model.hcq.all.ib44,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.ib44 = window(res.jags.hcq.all.ib44,start = 10001)
+res.jags.hcq.all.ib44 = window(res.jags.hcq.all.ib44,start = burnin+1)
 
 model.hcq.all.ib025025 = custom.jagsmodel(df.hcq, model = "modelIB025025.txt")
 
 res.jags.hcq.all.ib025025 = coda.samples(model = model.hcq.all.ib025025,
                                   variable.names = c("mu",
                                                      "tau"),
-                                  n.iter = 1000000,
-                                thin=500)
+                                  n.iter = niter,
+                                thin=thin)
 
 #Exclusion de la phase de chauffe
-res.jags.hcq.all.ib025025 = window(res.jags.hcq.all.ib025025,start = 10001)
+res.jags.hcq.all.ib025025 = window(res.jags.hcq.all.ib025025,start = burnin+1)
 ```
 
 # Analyse de sensibilité : *hyperpriors*
