--- a/main.Rmd
+++ b/main.Rmd
@@ -331,8 +331,8 @@ Groupe "études non publiées" (n=`r nrow(df.nopubs.hcq)`):
 
 - Médiane a posteriori : `r round(exp(summary(res.jags.hcq.nopubs)[[2]][5]),2)`
 - ICr 95% HDI : [`r round(exp(hdi(res.jags.hcq.nopubs)[1]),2)`;`r round(exp(hdi(res.jags.hcq.nopubs)[2]),2)`]
-- p-direction (OR > 1) : `r round(1-custom.pdir(res.jags.hcq.nopubs[[1]][,1],log(1)),2)`
-- p-direction (OR > 0.9) : `r round(1-custom.pdir(res.jags.hcq.nopubs[[1]][,1],log(0.9)),2)`
+- p-direction (OR < 1) : `r round(1-custom.pdir(res.jags.hcq.nopubs[[1]][,1],log(1)),2)`
+- p-direction (OR < 0.9) : `r round(1-custom.pdir(res.jags.hcq.nopubs[[1]][,1],log(0.9)),2)`
 
 *(Résultats de Axfors et al : 0.92 [0.63-1.34])*
 
